kubernetes-example-2/k8s_config/apigateway-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  labels:
    service: apigateway
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    api: apigateway

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  labels:
    api: apigateway
spec:
  template:
    metadata:
      labels:
        api: apigateway
    spec:
      containers:
        - image: fitnesszoneapp/api-gateway:1.0
          imagePullPolicy: Always
          name: apigateway
          ports:
            - containerPort: 9000
      restartPolicy: Always
  replicas: 1
  selector:
    matchLabels:
      api: apigateway
