kubernetes-example-2/k8s_config/mongo-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: fitnesszone
    tier: backend
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: fitnesszone
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: fitnesszone
spec:
  selector:
    matchLabels:
      app: fitnesszone
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: fitnesszone
        tier: backend
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-claim
      restartPolicy: Always
      containers:
        - name: mongo
          image: mongo:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/data/db"
              name: mongo-storage
          ports:
            - containerPort: 27017
