kubernetes-example-2/k8s_config/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: fitnesszone
    tier: backend
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: fitnesszone
    tier: backend
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
  labels:
    app: fitnesszone
spec:
  selector:
    matchLabels:
      app: fitnesszone
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: fitnesszone
        tier: backend
    spec:
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-claim
      restartPolicy: Always
      containers:
        - name: mysql
          image: mysql:latest
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mysql-storage
          ports:
            - containerPort: 3306
