kubernetes-example-2/k8s_config/productservice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: productservice
  labels:
    service: productservice
spec:
  ports:
    - port: 8091
      targetPort: 8091
  selector:
    api: productservice

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice
  labels:
    api: productservice
spec:
  template:
    metadata:
      labels:
        api: productservice
    spec:
      containers:
        - image: fitnesszoneapp/product-service:1.0
          imagePullPolicy: Always
          name: productservice
          ports:
            - containerPort: 8091
      restartPolicy: Always
  replicas: 1
  selector:
    matchLabels:
      api: productservice
