kubernetes-example-2/k8s_config/userservice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    service: userservice
spec:
  ports:
    - port: 8090
      targetPort: 8090
  selector:
    api: userservice

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    api: userservice
spec:
  template:
    metadata:
      labels:
        api: userservice
    spec:
      containers:
        - image: fitnesszoneapp/user-service:1.0
          imagePullPolicy: Always
          name: userservice
          ports:
            - containerPort: 8090
      restartPolicy: Always
  replicas: 1
  selector:
    matchLabels:
      api: userservice
