kubernetes-example-2/k8s_config/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fitnesszone
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: apigateway
              servicePort: 9000
          # - path: /product
          #   backend:
          #     serviceName: productservice
          #     servicePort: 8091
